# SimpleAlgorithm

./: .gitignore  CMakeLists.txt  README.md  easy_bucket_sort.c
miscellany/: array_size_length.c
queue_stack_list/: stack_echo.c  stack_match_brackets.c
sort/: bubble_sort.c  easy_bucket_sort.c  quick_sort.c  sort_dedupl.c  sort_func.c  sort_func.h
